segmentation fault when calling package depending on CUDA
When making a call to find_package() for a library depending on CUDA A segmentation fault is triggered if the calling CMakeFiles.txt project has not enabled the CUDA language
The segmentation fault is triggered in
source file: cmVisualStudio10TargetGenerator.cxx
function: bool cmVisualStudio10TargetGenerator::ComputeLinkOptions()
line 3335 with statement: switch (this->CudaOptions[config]->GetCudaRuntime()) {
because this->CudaOptions[config] is a nullptr
Currently this bug simply crashes cmake so some error handling code should be added and the user should be told to enable the CUDA language